# Real-Time-Edge-Detection-Viewer

./: .gitignore  README.md  build.gradle  gradle.properties  local.properties  package-lock.json  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/edgevision/: MainActivity.kt  YuvToRgbConverter.kt
app/src/main/java/com/example/edgevision/processor/: NativeProcessor.kt
app/src/main/java/com/example/edgevision/renderer/: GLRenderer.kt
app/src/main/java/com/example/edgevision/view/: CameraView.kt
app/src/main/res/drawable/: ic_camera.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
web/: package-lock.json  package.json  server.js
web/src/: index.html  viewer.ts
